# huggingface-llm-course

./: README.md  pyproject.toml
docs/poetry/: README.md
src/notebooks/: Capitulo 1 - Modelos de Transformers.ipynb
